// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`page > renders with all slots correctly 1`] = `"<div data-slot="root" class="">Left slot<div data-slot="center" class="">Default slot</div>Right slot</div>"`;

exports[`page > renders with as correctly 1`] = `
"<section data-slot="root" class="">
  <!--v-if-->
  <div data-slot="center" class=""></div>
  <!--v-if-->
</section>"
`;

exports[`page > renders with class correctly 1`] = `
"<div data-slot="root" class="lg:gap-4">
  <!--v-if-->
  <div data-slot="center" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`page > renders with default slot correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if-->
  <div data-slot="center" class="">Default slot</div>
  <!--v-if-->
</div>"
`;

exports[`page > renders with left slot correctly 1`] = `
"<div data-slot="root" class="">Left slot<div data-slot="center" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`page > renders with right slot correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if-->
  <div data-slot="center" class=""></div>Right slot
</div>"
`;

exports[`page > renders with ui correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if-->
  <div data-slot="center" class=""></div>
  <!--v-if-->
</div>"
`;
